--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "tslib": "^2.3.1",
     "typescript": "^4.3.5",
     "vite": "^2.5.0",
-    "web-component-analyzer": "^1.1.6"
+    "web-component-analyzer": "^1.1.6",
+    "web-types-lit": "^0.1.0"
   },
   "eslintConfig": {
     "parser": "@typescript-eslint/parser",
