--- a/package.json
+++ b/package.json
@@ -1,34 +1,40 @@
 {
   "name": "template-lit",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "wca": "web-component-analyzer analyze src --outFile custom-elements.json",
+    "prepare": "cem analyze --exclude \"**/*.d.ts\" --exclude \"**/*.stories.ts\" --litelement",
     "start": "vite",
-    "build": "npm run wca && vite build",
+    "build": "vite build",
     "test": "web-test-runner",
-    "storybook": "npm run wca && start-storybook -p 6006"
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "lit": "^2.0.0-rc.2",
+    "lit": "^2.6.1",
     "sass": "^1.38.0",
     "weightless": "0.0.37"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
+    "@custom-elements-manifest/analyzer": "latest",
     "@esm-bundle/chai": "^4.3.4-fix.0",
     "@open-wc/eslint-config": "^10.0.0",
     "@open-wc/testing": "^3.0.0",
-    "@storybook/addon-actions": "^6.4.0-alpha.30",
-    "@storybook/addon-essentials": "^6.4.0-alpha.30",
-    "@storybook/addon-links": "^6.4.0-alpha.30",
-    "@storybook/addons": "^6.3.7",
-    "@storybook/theming": "^6.3.7",
-    "@storybook/web-components": "^6.4.0-alpha.30",
+    "@storybook/addon-actions": "^7.0.6",
+    "@storybook/addon-essentials": "^7.0.6",
+    "@storybook/addon-links": "^7.0.6",
+    "@storybook/addon-mdx-gfm": "^7.0.6",
+    "@storybook/addons": "^7.0.6",
+    "@storybook/builder-vite": "^7.0.6",
+    "@storybook/manager-api": "^7.0.6",
+    "@storybook/theming": "^7.0.6",
+    "@storybook/web-components": "^7.0.6",
+    "@storybook/web-components-vite": "^7.0.6",
     "@types/node": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
@@ -36,14 +42,15 @@
     "@web/test-runner": "^0.15.0",
     "@web/test-runner-commands": "^0.6.0",
     "@web/test-runner-playwright": "^0.9.0",
+    "@web-types/lit": "^2.0.0-3",
     "babel-loader": "^9.0.0",
     "eslint": "^7.32.0",
-    "storybook-builder-vite": "0.0.12",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "storybook": "^7.0.6",
     "tslib": "^2.3.1",
     "typescript": "^5.0.0",
-    "vite": "^2.5.0",
-    "web-component-analyzer": "^1.1.6",
-    "web-types-lit": "^0.1.0"
+    "vite": "^4.3.1"
   },
   "eslintConfig": {
     "parser": "@typescript-eslint/parser",
