--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "prepare": "cem analyze --exclude \"**/*.d.ts\" --exclude \"**/*.stories.ts\" --litelement",
     "start": "vite",
     "build": "vite build",
-    "test": "web-test-runner",
+    "test": "wtr",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
