--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
     "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "useDefineForClassFields": false,
   },
   "include": ["src/**/*.ts",".storybook/**/*.ts"],
   "exclude": []
